# RosaServer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  deploy.sh  devbuild.sh
.github/: CODEOWNERS
.github/codeql/: codeql-config.yml
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml  codeql.yml  release-clang.yml  release.yml  test-clang.yml  test.yml  testbuild.yml
RosaServer/: CMakeLists.txt  api.cpp  api.h  childprocess.cpp  childprocess.h  console.cpp  console.h  crypto.cpp  crypto.h  engine.cpp  engine.h  filewatcher.cpp  filewatcher.h  git_version.cpp.in  git_version.h  hooks.cpp  hooks.h  image.cpp  image.h  lz4impl.cpp  lz4impl.h  opusencoder.cpp  opusencoder.h  pointgraph.cpp  pointgraph.h  rosaserver.cpp  rosaserver.h  server.h  sqlite.cpp  sqlite.h  structs.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  updateGit.cmake  worker.cpp  worker.h  zlib.cpp  zlib.h
RosaServerSatellite/: main.cpp
shared/sol/: config.hpp
test/: .gitignore  start  start-clang  test-clang
test/main/: init.lua
test/tests/: accounts.lua  bonds.lua  bullets.lua  chat.lua  crypto.lua  events.lua  fileWatcher.lua  http.lua  humans.lua  image.lua  itemTypes.lua  items.lua  lz4.lua  memory.lua  os.lua  physics.lua  players.lua  rigidBodies.lua  rotMatrix.lua  server.lua  sqlite.lua  streets.lua  vector.lua  vehicles.lua  worker.lua  worker.worker.lua  zlib.lua
